--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 
 @media only screen and (max-width:600px) {
-  @import url('https://fonts.googleapis.com/css2?family=Alkalami&family=Inter:wght@100;200;&family=Poppins:ital,wght@0,100;0,200;0,300;0,500;0,600;1,100;1,200;1,300;1,400;1,500&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Alkalami&family=Inter:wght@100;200;300;400;500;600;700;800&family=Poppins:ital,wght@0,100;0,200;0,300;0,500;0,600;1,100;1,200;1,300;1,400;1,500&display=swap');
   *{
     margin:0;
-    font-family: 'Alkalami', serif;
-    font-weight: 100;
+    font-family: 'Akaya Kanadaka', cursive;
+    font-weight: 400;
    }
   .top{
     width:100%;
@@ -85,9 +85,145 @@
     width: 20px;
     position: absolute;
     left: 85vw;
-    top: 27vw;
+    top: 29vw;
 
   }
+ .calendrier{
+  display: flex;
+  flex-direction: column;
+  margin-top: 25vw;
+  border: none;
+ }
 
+ .mere2{
+  height: 60vw;
+  width: 85vw;
+  margin-top: 60vw;
+  margin-left: 8vw;
+  justify-content: space-between;
+  box-shadow: 2px  5px 5px hsl(184, 100%, 50%);
+  border-radius: 5vw;
+  border: 1px solid hsl(184, 100%, 50%);
+
+  
+  
+ }
+ .fatherinpt{
+  margin-left: 27vw;
+ }
+
+ select{
+  background-color: transparent;
+  border-radius: 5px;
+  margin-left: 5px;
+ }
+ .children{
+  width: 90%;
+ }
+ 
+ .mar{
+  margin-top: 5vw;
+ }
+
+ .mar2{
+  margin-top: 10vw;
+  margin-left: 25vw;
+  background-color: #19A3FF;
+  height: 15vw;
+  width: 45vw;
+  font-size: 30px;
+  position: fixed;
+  border-radius: 10px;
+  color: white;
+ }
+ .mar3{
+  margin-top: 7vw;
+  margin-left: 25vw;
+  background-color: #19A3FF;
+  height: 13vw;
+  width: 47vw;
+  font-size: 30px;
+  position: fixed;
+  border-radius: 10px;
+  color: white;
+ }
+ .bigmother{
+  height: 76vh;
+  width: 90%;
+  margin-left: 5vw;
+  margin-top: -25vw;
+  border-radius: 5vw;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid white;
+  box-shadow: 1px  5px 5px #00EEFF;
+
+ }
+ .smallchild{
+  height: 70vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 90%;
+ }
+ .bigmother input{
+  height: 40px ;
+  border-radius: 10px;
+  color: grey;
+  font-size: 20px;
+  margin-top: 15px;
+  border: solid grey 1px;
+  outline: none;
+
+  
+ }
+ .visa{
+  height: 50px;
+  width: 70px;
+  margin-top: 3vw;
+  margin-left: -40vw;
+ }
+ .bas{
+  margin-left: -45vw;
+  font-size: 20px;
+  margin-top: 5px;
+ }
+ .bas2{
+  margin-left: -30px;
+  width: 120%;
+ }
+ .bas2 input{
+  width: 70px;
+ }
+ .bas3{
+  margin-left: -50vw;
+  font-size: 20px;
+  margin-top: 5vw;
+
+
+ }
+ .bas4{
+  margin-left: -10vw;
+  font-size: 20px;
+  margin-top: 5vw;
+
+
+ }
+ .hey{
+  width: 130%;
+  margin-left: -10vw;
+  display:flex;
+  align-items: center;
+ }
+ .taille{
+  width: 130px;
+ }
+ .sp{
+  display:flex;
+  justify-content: space-between;
+  width: 90%;
+ }
   
   }
