--- a/src/components/Chambres/Chambres.css
+++ b/src/components/Chambres/Chambres.css
@@ -9,11 +9,18 @@
     }
 
     h3{
-        color: #ffffff;
-        margin-top: -150px;
+        color: white;
+        margin-top: 100px;
         font-family: 'Akaya Kanadaka';
         font-size: 40px;
-        margin-left: 95px;
+        margin-left: 140px;
+    }
+    .chm{
+        color: white;
+        margin-top: 1px;
+        font-family: 'Akaya Kanadaka';
+        font-size: 40px;
+        margin-left: 100px;
     }
     h1{
         color: black;
@@ -23,7 +30,7 @@
     }
     .chambre{
        margin-left: 25px;
-       margin-top: -55px;
+       margin-top: -5px;
     }
 
     .chambre p{
@@ -76,10 +83,61 @@
         color: white;
        }
 
-    .image{
-        margin-top: 30px;
-        margin-left: 90px;
-        height: 150px;
+    .slide{
+        margin-top: -110px;
+        margin-left: 30px;
+        height: 200px;
+
       }
+
+    .box-item{
+        width: 440px;
+        height: 200px;
+        margin-left: -55px;
+      }
+
+    .lit h3{
+        margin-left: -2px;
+    }
+    
+    .lit p{
+        margin-left: -2px;
+        padding-right: 20px;
+        text-align: justify;
+    }
+
+    .total {
+        display: flex;
+    }
+    .total p{
+        margin-left: 65px;
+    }
+
+    .total .montant{
+        align-items: center;
+        text-align: center;
+        padding-right: 10px;
+        font-size: 25px;
+        margin-top: 35px;
+        margin-left: 15px;
+        font-weight: bold;
+        padding-right: 10px;
+
+    }
+
+    
+
+    .slide .block{
+        width: 90%;
+        height: 100px;
+        margin: auto;
+        /* height: 100%;
+        display: block;
+        color: white;
+        margin-left: 100px; */
+
+      }
+
+   
     
   }
