--- a/src/components/Accueil/Accueil.css
+++ b/src/components/Accueil/Accueil.css
@@ -2,14 +2,23 @@
 
 @media only screen and (max-width: 600px) {
     .accueil{
-        background-image: url('/src/components/image/home.jpg');
-        background-repeat: no-repeat;
-        background-size: cover;
-        height: 895px;
+        width:100%;
+        height: 667px;
+        background-color: #17A9FF;
+        border-start-start-radius: 10px;
+        align-items:center;
+        flex-direction: column;
+        display:flex;  
+    }
+
+    .logo{
+        width:45%;
+        height: 180px;
+        margin-top: 150px;
     }
     
     .h2{
-        color: #0038FF;
+        color: #ffffff;
         font-size: 30px;
         font-family: 'Akaya Kanadaka', cursive;
         margin-top: -300px;
@@ -26,16 +35,16 @@
         text-align: center;
     }
     
-    .mar3{
+    .exp{
         margin-top: 7vw;
         margin-left: 25vw;
-        background-color: #19A3FF;
+        background-color: #ffffff;
         height: 13vw;
         width: 47vw;
         font-size: 30px;
         position: fixed;
         border-radius: 10px;
-        color: white;
+        color: #19A3FF;
        }
   }
 
