--- a/src/components/Accueil/Accueil.css
+++ b/src/components/Accueil/Accueil.css
@@ -17,11 +17,11 @@
         margin-top: 150px;
     }
     
-    .h2{
+    .house{
         color: #ffffff;
-        font-size: 30px;
+        font-size: 40px;
         font-family: 'Akaya Kanadaka', cursive;
-        margin-top: -300px;
+        margin-top: -200px;
         align-items: center;
         text-align: center;
     }
